<resources>

    <string name="app_name">expro</string>
    <string name="exitshow">确定退出么？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    
    <!-- foot content -->
    <string name="str_home">首页</string>
    <string name="str_vip">贵宾卡专区</string>
    <string name="str_news">本月艺讯</string>
    <string name="str_map">交通信息</string>
    <string name="str_more">更多</string>
    <!-- 首页的字符串 -->
    <string name="str_home_title">苏州文化博览APP</string>
    <string name="str_home_yanchu">演出</string>
    <string name="str_home_dianying">电影</string>
    <string name="str_home_huizhan">会展</string>
    <string name="str_home_suyipeixun">苏艺培训</string>
    <string name="str_home_jinjihu">金鸡湖美术馆</string>
    <string name="str_home_jinjihu2">金鸡湖艺坛</string>
    <string name="copyright">苏州文化博览中心有限公司 版权所有</string>
    <string name="swipe">swipe from left to right</string>

    
</resources>