<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="0dp"
	android:background="@drawable/tabbar"
	>
	<LinearLayout 	android:orientation="vertical"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:id="@+id/linearHOme"
					android:background="@drawable/selector_blue_to_red"
					>
		<ImageView 	android:src="@drawable/home"
					android:layout_weight="2"
					android:id="@+id/imageHome" 
					android:paddingTop="12px"
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent">
		</ImageView>
		<TextView 	android:layout_width="fill_parent"
					android:layout_weight="3"
					android:layout_height="fill_parent"
					android:text="@string/str_home" 
					style="@style/footer_text"
					 />
	</LinearLayout>
	<LinearLayout 	android:orientation="vertical"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:id="@+id/linearNews"
					android:background="@drawable/selector_blue_to_red"
					>
		<ImageView 	android:src="@drawable/news"
					android:layout_weight="2"
					android:id="@+id/imageNews" 
					android:paddingTop="12px"
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent">
		</ImageView>
		<TextView 	android:layout_width="fill_parent"
					android:layout_weight="3"
					android:layout_height="fill_parent"
					android:text="@string/str_news" 
					style="@style/footer_text"
					 />
	</LinearLayout>
	<LinearLayout 	android:orientation="vertical"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:id="@+id/linearVip"
					android:background="@drawable/selector_blue_to_red"
					>
		<ImageView 	android:src="@drawable/vip"
					android:layout_weight="2"
					android:id="@+id/imageVip" 
					android:paddingTop="12px"
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent">
		</ImageView>
		<TextView 	android:layout_width="fill_parent"
					android:layout_weight="3"
					android:layout_height="fill_parent"
					android:text="@string/str_vip" 
					style="@style/footer_text"
					 />
	</LinearLayout>
	<LinearLayout 	android:orientation="vertical"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:id="@+id/linearMap"
					android:background="@drawable/selector_blue_to_red"
					>
		<ImageView 	android:src="@drawable/map"
					android:layout_weight="2"
					android:id="@+id/imageMap" 
					android:paddingTop="12px"
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent">
		</ImageView>
		<TextView 	android:layout_width="fill_parent"
					android:layout_weight="3"
					android:layout_height="fill_parent"
					android:text="@string/str_map" 
					style="@style/footer_text" 
					/>
	</LinearLayout>
	<LinearLayout 	android:orientation="vertical"
					android:layout_weight="1"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
					android:id="@+id/linearMore"
					android:background="@drawable/selector_blue_to_red"
					>
		<ImageView 	android:src="@drawable/more"
					android:layout_weight="2"
					android:id="@+id/imageMore" 
					android:paddingTop="12px"
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent">
		</ImageView>
		<TextView 	android:layout_width="fill_parent"
					android:layout_weight="3"
					android:layout_height="fill_parent"
					android:text="@string/str_more" 
					style="@style/footer_text"
					 />
	</LinearLayout>
	
</LinearLayout>
