<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    			xmlns:android="http://schemas.android.com/apk/res/android"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical" 
			    android:gravity="bottom"
			    >
		<include 	layout="@layout/header_home"
					android:layout_width="fill_parent"
					android:layout_height="50dp"
					/>
		<LinearLayout 
		    		android:layout_width="match_parent"
		    		android:layout_height="100dp"
		    		android:background="#00FF00"
		    		>
		    
		</LinearLayout>
		<LinearLayout 
		    		android:layout_width="match_parent"
		    		android:layout_height="fill_parent"
		    		android:layout_weight="1"
		    		android:orientation="vertical"
		    		>
		    		<LinearLayout 
					    		android:layout_width="match_parent"
					    		android:layout_height="match_parent"
					    		android:orientation="horizontal"
					    		android:layout_weight="1"
					    		android:layout_marginTop="10dp"
					    		>
					    		<LinearLayout 
								    		android:layout_width="fill_parent"
								    		android:layout_height="45dp"
								    		android:orientation="horizontal"
								    		android:layout_weight="1"
								    		android:background="@drawable/yanchu"
								    		android:gravity="center"
								    		>
										<TextView 
										    		android:layout_width="wrap_content"
										    		android:layout_height="wrap_content"
										    		android:text="@string/str_home_yanchu"
										    		android:textSize="17sp"
										    		android:textColor="#FFFFFF"
										    		android:textStyle="bold"
										    		/>
					    			
								</LinearLayout>
								<View 
								    		android:layout_width="10dp"
								    		android:layout_height="wrap_content"
								    		android:orientation="horizontal"
								    		android:gravity="center"
								    		/>
								<LinearLayout 
								    		android:layout_width="fill_parent"
								    		android:layout_height="45dp"
								    		android:orientation="horizontal"
								    		android:layout_weight="1"
								    		android:background="@drawable/dianying"
								    		android:gravity="center"
								    		>
										<TextView 
										    		android:layout_width="wrap_content"
										    		android:layout_height="wrap_content"
										    		android:text="@string/str_home_dianying"
										    		android:textSize="17sp"
										    		android:textColor="#FFFFFF"
										    		android:textStyle="bold"
										    		/>
					    			
								</LinearLayout>
					    		
					</LinearLayout>
					<LinearLayout 
					    		android:layout_width="match_parent"
					    		android:layout_height="match_parent"
					    		android:orientation="horizontal"
					    		android:layout_weight="1"
					    		android:layout_marginTop="3dp"
					    		>
					    		<LinearLayout 
								    		android:layout_width="fill_parent"
								    		android:layout_height="45dp"
								    		android:orientation="horizontal"
								    		android:layout_weight="1"
								    		android:background="@drawable/huizhan"
								    		android:gravity="center"
								    		>
										<TextView 
										    		android:layout_width="wrap_content"
										    		android:layout_height="wrap_content"
										    		android:text="@string/str_home_huizhan"
										    		android:textSize="17sp"
										    		android:textColor="#FFFFFF"
										    		android:textStyle="bold"
										    		/>
					    			
								</LinearLayout>
								<View 
								    		android:layout_width="10dp"
								    		android:layout_height="wrap_content"
								    		android:orientation="horizontal"
								    		android:gravity="center"
								    		/>
								<LinearLayout 
								    		android:layout_width="fill_parent"
								    		android:layout_height="45dp"
								    		android:orientation="horizontal"
								    		android:layout_weight="1"
								    		android:background="@drawable/peixun"
								    		android:gravity="center"
								    		>
										<TextView 
										    		android:layout_width="wrap_content"
										    		android:layout_height="wrap_content"
										    		android:text="@string/str_home_suyipeixun"
										    		android:textSize="17sp"
										    		android:textColor="#FFFFFF"
										    		android:textStyle="bold"
										    		/>
					    			
								</LinearLayout>
					    		
					</LinearLayout>
					<LinearLayout 
					    		android:layout_width="match_parent"
					    		android:layout_height="match_parent"
					    		android:orientation="horizontal"
					    		android:layout_weight="1"
					    		android:layout_marginTop="3dp"
					    		>
					    		<LinearLayout 
								    		android:layout_width="fill_parent"
								    		android:layout_height="45dp"
								    		android:orientation="horizontal"
								    		android:layout_weight="1"
								    		android:background="@drawable/meishu"
								    		android:gravity="center"
								    		>
										<TextView 
										    		android:layout_width="wrap_content"
										    		android:layout_height="wrap_content"
										    		android:text="@string/str_home_jinjihu"
										    		android:textSize="17sp"
										    		android:textColor="#FFFFFF"
										    		android:textStyle="bold"
										    		/>
					    			
								</LinearLayout>
								<View 
								    		android:layout_width="10dp"
								    		android:layout_height="wrap_content"
								    		android:orientation="horizontal"
								    		android:gravity="center"
								    		/>
								<LinearLayout 
								    		android:layout_width="fill_parent"
								    		android:layout_height="45dp"
								    		android:orientation="horizontal"
								    		android:layout_weight="1"
								    		android:background="@drawable/yitan"
								    		android:gravity="center"
								    		>
										<TextView 
										    		android:layout_width="wrap_content"
										    		android:layout_height="wrap_content"
										    		android:text="@string/str_home_jinjihu2"
										    		android:textSize="17sp"
										    		android:textColor="#FFFFFF"
										    		android:textStyle="bold"
										    		/>
					    			
								</LinearLayout>
					    		
					</LinearLayout>
		    
		</LinearLayout>

    	<TextView
		    	    android:layout_width="match_parent"
		    	    android:layout_height="30dp"
		    	    android:text="@string/copyright"
		    	    android:gravity="center"
		    	    android:textSize="9sp"
		    	    />
	
  		<include 	layout="@layout/footer"
					android:layout_width="fill_parent"
					android:layout_height="60dp"
					/>
</LinearLayout>